# webnsupdate

./: .editorconfig  .release-plz.toml  .renovaterc.json  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  common-args.nix  default.nix  deny.toml  flake.nix  justfile  module.nix  renovate.json  run-cmd.nix
.cargo/: config.toml
.forgejo/workflows/: check.yml  renovate.yml  update.yml
.github/workflows/: check.yml  release.yml
crates/webnsupdate/: Cargo.toml
crates/webnsupdate/src/: auth.rs  main.rs  records.rs
crates/webnsupdate/src/snapshots/: webnsupdate__records__test__empty_label.snap  webnsupdate__records__test__hostname_too_long.snap
flake-modules/: default.nix  module.nix  overlay.nix  package.nix  tests.nix
scripts/: release.bash
src/: auth.rs  cli.rs  config.rs  main.rs  nsupdate.rs  password.rs  records.rs  state.rs  update_handler.rs
src/config/: default.rs  error.rs  password.rs  records.rs  server.rs
src/snapshots/: webnsupdate__records__test__empty_label.snap  webnsupdate__records__test__hostname_too_long.snap  webnsupdate__records__test__invalid_ascii.snap  webnsupdate__records__test__invalid_octet.snap  webnsupdate__records__test__label_too_long.snap  webnsupdate__records__test__not_fqd.snap
