[workspace]
members = ["crates/webnsupdate"]

[workspace.package]
version = "0.3.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/jalil-salame/webnsupdate"
publish = ["git-salame-cl"]
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*",
]

[workspace.dependencies]
axum = "0.8.4"
axum-client-ip = "1.1.3"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false }
http = "1.3.1"
humantime = "2.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["process", "io-util"] }
tower-http = { version = "0.6.6", features = ["validate-request"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
