[package]
description = "An HTTP server using HTTP basic auth to make secure calls to nsupdate"
name = "webnsupdate"
version = "0.4.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["dns", "dyndns", "dynamic-ip"]
categories = ["networking", "dns", "dyndns"]
repository = "https://github.com/jalil-salame/webnsupdate"
publish = ["git-salame-cl"]
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
cargo = { level = "warn", priority = -2 }
filetype_is_file = "warn"
multiple_crate_versions = "allow"
panic_in_result_fn = "warn"
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "warn"
unwrap_in_result = "warn"

[dependencies]
axum = "0.8.4"
axum-client-ip = "1.1.3"
base64 = "0.22.1"
clap = { version = "4.5.46", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
humantime = "2.2.0"
miette = { version = "7.6.0", features = ["fancy"] }
ring = { version = "0.17.14", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
  "macros",
  "rt",
  "signal",
  "process",
  "io-util",
] }
tower-http = { version = "0.6.6", features = ["validate-request"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }

[profile.release]
opt-level = "s"   # reduce size for release since this isn't a high perf application
panic = "abort"   # more size reducction
lto = true        # even more size reducction
strip = true      # strip debug symbols for an even smaller binary
codegen-units = 1 # compile everything in one unit (even more size reducction)

[profile.dev]
debug = 0 # no debug info for faster link times
